# Plutus

./: .env.example  .gitignore  LICENSE  NontechGuide.txt  README.md  SystemArchitecture.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_000000_001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: ai_explanations.py  anomalies.py  audit.py  auth.py  exceptions.py  ingestion.py  reconciliation.py  reports.py  sources.py  users.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/core/ai_providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
backend/app/models/: __init__.py  ai_explanation.py  anomaly.py  audit.py  base.py  exception.py  ingestion.py  reconciliation.py  report.py  source.py  transaction.py  user.py
backend/app/schemas/: ai_explanation.py  audit.py  auth.py  exception.py  ingestion.py  reconciliation.py  report.py  source.py
backend/app/services/: ai_explanation_service.py  anomaly_service.py  audit_service.py  exception_service.py  export_service.py  ingestion_service.py  matching_service.py  normalization_service.py  reconciliation_service.py  reporting_service.py  validation_service.py
backend/app/utils/: csv_tools.py  dates.py  hashing.py  money.py
backend/app/workers/: ai_tasks.py  celery_app.py  ingestion_tasks.py  reconciliation_tasks.py  report_tasks.py
backend/scripts/: create_admin.py  seed_demo_data.py
backend/tests/: __init__.py  conftest.py  test_ai_explanations.py  test_auth.py  test_exceptions.py  test_ingestion.py  test_reconciliation.py  test_reports.py  test_sources.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/features/auth/: AuthProvider.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AdminPage.tsx  AuditPage.tsx  DashboardPage.tsx  ExceptionsPage.tsx  IngestionPage.tsx  LoginPage.tsx  ReconciliationDetailsPage.tsx  ReconciliationPage.tsx  ReportsPage.tsx  SourcesPage.tsx
infra/docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
infra/nginx/: default.conf
